feat(upgrade): upgrade version java25 with gradle 9.1.0